Fix: 운동기록 API 수정사항 반영 및 정리